test/integration/cases/05-ingress-override/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-has-override
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: my-override
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /foo
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-no-override
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /bar
        pathType: Prefix
---
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  name: my-override
route:
  methods:
  - GET
